test/expected/explain_vv_o_new_z.out
explain virtual void* operator new(size_t)
                    ^
21: error: operator "new" can not be "virtual"
